started cluster with receptionist, solved akka bug for register and subscribe and double message

--- a/src/main/resources/application_cluster.conf
+++ b/src/main/resources/application_cluster.conf
@@ -3,7 +3,7 @@ akka {
     provider = cluster
 
     serialization-bindings {
-      "it.unibo.pcd.akka.cluster.example.CborSerializable" = jackson-cbor
+      "assignment03.CborSerializable" = jackson-cbor
     }
   }
   remote {
